2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Don't generate duplicate
	error when an element type is put in the "minus" list
	and the element type is not allowed explicitly in the particular
	element content model.
	(html:a checker): New checker.
	(html:details, html:datagrid): New checkers.
	(html:legend): New checker.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (html:li checker): Implemented.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLInlineOrStriclyInlineChecker): New
	checker.
	(html:dd checker): New checker.
	(html:q, html:em, html:strong, html:small,
	html:m, html:dfn, html:code, html:samp, html:span): New checkers.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($AnyChecker): Renamed
	from |$ElementDefault->{checker}|.
	($ElementDefault->{checker}): Throw an error that 
	the element type is not supported by the checker.
	($HTMLMetadataElement): |html:base| was missing.
	($HTMLEmptyChecker): Don't throw an error 
	for inter-element whitespace nodes.
	(html:html checker): Errors were not
	thrown even if |html:head| and/or |html:body|
	children were missing.
	(html:head checker): An error was not
	thrown if <meta charset> appered after other
	elements.

2007-05-05  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |footer|, |video|, |audio|, |script|,
	and |noscript| elements are implemented.
	(new): New method.

2007-05-04  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: New module.

2007-05-04  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (manakai_parent_element,
	document_element, manakai_local_name,
	manakai_element_type_match): New method.

2007-05-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Replace decimal and hexadecimal numeric
	entities in C1 range using Windows-1252 mapping.  Bare LF
	did not count as new line for error reporting.

2007-05-02  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (DOMImplementation): New class.