@@ -1,5 +1,10 @@
 2007-05-13  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm: Use hashs rather than lists for
+	element type testings.
+
+2007-05-13  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: Don't generate duplicate
 	error when an element type is put in the "minus" list
 	and the element type is not allowed explicitly in the particular
